[package]
name = "comex"
version = "0.1.0"
authors = ["Jonathan Mayer <jonathan.mayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0"
lazy_static = "0"
rocket = { path = "../Rocket/core/lib", features = ["tls"] }
# rocket = { path = "../Rocket/core/lib"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
path = "../Rocket/contrib/lib"
default-features = false
features = ["json"]
